# film_installer

client/: package-lock.json  package.json
client/src/: theme.ts
client/src/api/: index.ts
client/src/app/: layout.tsx  page.tsx
gpt-parser/: commands.txt  index.py  pyproject.toml
parser/: pyproject.toml  test.py
server/: .env  pyproject.toml  soup.html
server/app/: main.py
server/app/config/: aiohttp.py  database.py  env.py  logging.conf
server/app/integration/: uakino.py
server/app/models/: index.py  movie.py
server/app/parsers/uakino/: index.py
server/app/routes/: citations.py  index.py  root.py
server/app/schedule_methods/: index.py
server/app/services/: parse_service.py  telegram_service.py  video_service.py
server/app/utils/: get_epic_time_on_audio.py  parsers.py
server/help/: docker.txt  download_video_from_ashivip.py
